# opensidewalks_cli

./: .dockerignore  .gitignore  Dockerfile  README.md  extract_tasks.py  pyproject.toml
opensidewalks_cli/: __main__.py  cli.py  exceptions.py  extract_tasks.py  io.py  osm_graph.py  way_filters.py
opensidewalks_cli/tasks/: crossing_tasks.py  sidewalk_tasks.py
tasking-manager-projects/us-md-ocean_city/data_sources/: us-md-ocean_city.pbf
tasking-manager-projects/us-md-ocean_city/intermediate_data/: us-md-ocean_city-boundary.geojson
