[tool.poetry]
name = "opensidewalks-data-staging"
version = "0.1.0"
description = "OpenStreetMap data (and mapping task) staging workflows for pedestrian network mapping."
authors = ["Nick Bolten"]
license = "Apache-2.0"


[tool.poetry.dependencies]
python = "^3.8"
jupyter = {extras = ["all"], version = "^1.0.0"}
plotnine = "^0.7.1"
numpy = "^1.19.5"
scipy = "^1.6.0"
geopandas = "^0.8.1"
osmium = "^3.1.2"
networkx = "^2.5"
rtree = "^0.9.7"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
