[tool.poetry]
name = "opensidewalks_cli"
version = "0.1.0"
description = "OpenStreetMap command line tools for data staging and task splitting for pedestrian data (OpenSidewalks)."
authors = ["Nick Bolten"]
license = "Apache-2.0"

[tool.poetry.scripts]
osw = "opensidewalks_cli:cli.osw"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = {extras = ["all"], version = "^1.0.0"}
plotnine = "^0.7.1"
numpy = "^1.20.0"
scipy = "^1.6.1"
geopandas = "^0.8.1"
pandas = "^1.5.3"
osmium = "^3.1.2"
networkx = "^2.5"
rtree = "^0.9.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
